--- a/package.json
+++ b/package.json
@@ -20,6 +20,14 @@
     "grunt": "^1.0.3",
     "wdio-allure-reporter": "^0.8.3",
     "wdio-cucumber-framework": "^2.2.8",
+    	"selenium-standalone": "^5.9.1",
     "wdio-selenium-standalone-service": "0.0.11"
   }
+  ,
+  "scripts": {
+		"start": "selenium-standalone start",
+		"selenium": "selenium-standalone",
+	}
+
+	
 }
