--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   ,
   "scripts": {
 		"start": "selenium-standalone start",
-		"selenium": "selenium-standalone"
+		"selenium": "selenium-standalone",
 	        "test": "./node_modules/.bin/wdio wdio.conf.js"
 	}
 
