--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   }
   ,
   "scripts": {
-		"start": "selenium-standalone start",
+		//"start": "selenium-standalone start",
 		"selenium": "selenium-standalone",
 	        "test": "./node_modules/.bin/wdio wdio.conf.js"
 	}
