--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   ,
   "scripts": {
 		"selenium": "selenium-standalone",
+	  "start":"selenium-standalone start",
 	        "test": "./node_modules/.bin/wdio wdio.conf.js"
 	}
 
